--- a/hw-campuspaths/public/index.html
+++ b/hw-campuspaths/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Campus Paths</title>
+    <link rel="stylesheet" href="../src/App.css"/>
   </head>
   <body>
     <div id="root"></div>
